# icml-2026-reproductions

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: HANDOFF.md  REMOTE_SETUP.md
submissions/nape/: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  UPSTREAM.md  pyproject.toml
submissions/nape/.github/workflows/: python-package.yml
submissions/nape/.superpowers/sdd/: final-fix-report.md  task-4-report.md  task-5-report.md  task-6-report.md
submissions/nape/.trackio/: .gitignore  metadata.json
submissions/nape/.trackio/logbook/: README.md  index.html  logbook.css  logbook.js  logbook.json
submissions/nape/.trackio/logbook/assets/: poster_embed.html
submissions/nape/.trackio/logbook/pages/: index.md
submissions/nape/docs/superpowers/plans/: 2026-07-20-nape-reproduction.md  2026-07-21-nape-score-improvement.md
submissions/nape/docs/superpowers/specs/: 2026-07-20-nape-reproduction-design.md  2026-07-21-nape-score-improvement-design.md
submissions/nape/repro_bundle/: README.md  claim_1_benchmark.json  claim_2_predictability.json  claim_3_future_adaptation.json  claims_4_6_status.json  environment.json
submissions/nape/scripts/: validate_icml_logbook.py
submissions/nape/src/icml_2026_repro/: __init__.py  audit.py  benchmark_evidence.py  cli.py  future_adaptation_evidence.py  online_trace.py  predictability_evidence.py
submissions/nape/tests/: test_audit.py  test_benchmark_evidence.py  test_cli.py  test_future_adaptation_evidence.py  test_online_trace.py  test_predictability_evidence.py
(+24 files in other folders)
