[project]
name = "icml-2026-repro"
version = "0.1.0"
description = "Reproducibility audit for NAPE trajectories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=1.24.0",
    "next-action-pred-eval[dev]",
    "trackio>=0.31.5",
]

authors = [
    { name = "Will Rice", email = "wrice20@gmail.com" },
]

[build-system]
requires = ["uv_build>=0.9.2,<0.12"]
build-backend = "uv_build"

[project.scripts]
nape-repro = "icml_2026_repro.cli:main"

[tool.uv.workspace]
members = [
    "external/NAPE",
]

[tool.uv.sources]
next-action-pred-eval = { workspace = true, editable = true }

[tool.uv.build-backend]
module-name = ["icml_2026_repro"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "D", "N", "B", "PTH", "ANN"]
ignore = ["D107"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.12.7",
    "ty>=0.0.1",
]
